Fix line wrapping with criteria text segments

--- a/teachertool/src/components/styling/CriteriaInstanceDisplay.module.scss
+++ b/teachertool/src/components/styling/CriteriaInstanceDisplay.module.scss
@@ -28,6 +28,7 @@
 
     .segment-container {
         display: flex;
+        flex-wrap: wrap;
         flex-direction: row;
         align-items: flex-start;
         justify-content: flex-start;
